# industrial-knowledge-engine

./: .gitignore  .replit  README.md  neo4j.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.nix
api/: app.py  chat_handler.py  config.py  data_setup.py  database.py  graph_generator.py  main.py  models.py  ontology_processor.py  routes.py
api/instance/: knowledge_graph.db
api/migrations/: env.py
api/tests/: conftest.py  test_api.py  test_e2e.py
attached_assets/: Pasted-how-many-assets-are-in-the-graph-09-54-PM-Based-on-the-provided-context-there-are-19-assets-in-the-1736488572545.txt  Pasted-how-many-work-orders-exist-in-the-graph-10-02-PM-Based-on-the-provided-context-there-are-a-total-o-1736488983863.txt  Pasted-how-many-workorders-exist-in-the-graph-09-57-PM-Based-on-the-provided-context-there-are-0-work-ord-1736488704646.txt
data/neo4j/data/: server_id
data/neo4j/data/databases/neo4j/: neostore  neostore.counts.db  neostore.indexstats.db  neostore.labeltokenstore.db.id  neostore.labeltokenstore.db.names.id  neostore.nodestore.db  neostore.nodestore.db.id  neostore.nodestore.db.labels.id  neostore.propertystore.db  neostore.propertystore.db.id  neostore.propertystore.db.index.id  neostore.propertystore.db.index.keys  neostore.propertystore.db.index.keys.id  neostore.propertystore.db.strings.id  neostore.relationshipgroupstore.db.id  neostore.relationshipgroupstore.degrees.db  neostore.relationshipstore.db.id  (+3 more)
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  setupTests.ts
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx  GraphViewer.tsx  OntologyValidator.tsx  RuleEditor.tsx
frontend/src/components/__tests__/: RuleEditor.test.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+32 files in other folders)
