[project]
name = "repl-nix-ontologyextractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.0.0",
    "pandas>=2.2.3",
    "neo4j>=5.27.0",
    "networkx>=3.4.2",
]
