[project]
name = "repl-nix-ontologyextractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.0.0",
    "pandas>=2.2.3",
    "neo4j>=5.27.0",
    "networkx>=3.4.2",
    "py2neo>=2021.2.4",
    "neo4j-driver>=5.27.0",
    "trafilatura>=2.0.0",
    "openai>=1.59.3",
    "numpy>=2.2.1",
    "sqlalchemy>=2.0.36",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "twilio>=9.4.1",
]
