[project]
name = "repl-nix-ontologyextractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.0.0",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "trafilatura>=2.0.0",
    "openai>=1.59.3",
    "numpy>=2.2.1",
    "sqlalchemy>=2.0.36",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "twilio>=9.4.1",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
    "pytest>=8.3.4",
    "alembic>=1.14.0",
]
